feat: add typeorm and postgres

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ NODE_ENV='development'
 
 SERVICE_HOST='localhost'
 SERVICE_PORT='4000'
+
+# Postgres Database Config
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
+POSTGRES_USERNAME=admin
+POSTGRES_PASSWORD=k2h@ks58I!u
+POSTGRES_DATABASE=match-me
