feat: add moongose and mongodb envirement

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ SERVICE_PORT='4000'
 # Postgres Database Config
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
-POSTGRES_USERNAME=admin
-POSTGRES_PASSWORD=k2h@ks58I!u
-POSTGRES_DATABASE=match-me
+POSTGRES_USERNAME=*******
+POSTGRES_PASSWORD=*******
+POSTGRES_DATABASE=*******
+
+# MongoDb Database Config
+MONGODB_HOST=127.0.0.1
+MONGODB_PORT=27017
+MONGODB_USERNAME=*******
+MONGODB_PASSWORD=*******
+MONGODB_DATABASE=*******
