--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.2",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.4",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.2.4",
     "mongoose": "^6.1.6",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
