--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stripe": "^8.200.0",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.41"
   },
