--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@adminjs/express": "^4.0.1",
+    "@adminjs/nestjs": "^4.0.0",
+    "@adminjs/typeorm": "^2.0.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.2",
     "@nestjs/core": "^8.0.0",
@@ -28,6 +31,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
+    "adminjs": "^5.5.1",
     "mongoose": "^6.1.6",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
