--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.4",
+    "@nestjsx/crud": "^5.0.0-alpha.3",
+    "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "adminjs": "^5.5.1",
     "mongoose": "^6.1.6",
     "pg": "^8.7.1",
