feat: add login and register

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ MONGODB_PORT=27017
 MONGODB_USERNAME=*******
 MONGODB_PASSWORD=*******
 MONGODB_DATABASE=*******
+
+# jwt
+JWT_SECRET=*******
+JWT_TOKEN_EXPIRE_TIME=*******
