--- a/package.json
+++ b/package.json
@@ -21,64 +21,56 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@adminjs/express": "^4.0.1",
-    "@adminjs/nestjs": "^4.0.0",
-    "@adminjs/typeorm": "^2.0.1",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.1.2",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.1",
+    "@adminjs/express": "^6.0.0",
+    "@adminjs/nestjs": "^6.0.1",
+    "@adminjs/typeorm": "^5.0.0",
+    "@nestjs/common": "^10.0.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.3",
     "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^9.0.2",
-    "@nestjs/passport": "^8.2.2",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-socket.io": "^8.2.4",
-    "@nestjs/swagger": "^5.1.5",
-    "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.2.4",
+    "@nestjs/mongoose": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/platform-socket.io": "^10.0.3",
+    "@nestjs/swagger": "^7.0.4",
+    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.0.3",
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
-    "adminjs": "^5.5.1",
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.2",
-    "mongoose": "^6.1.6",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.7.1",
+    "adminjs": "^7.0.6",
+    "class-transformer": "^0.5.1",
+    "mongoose": "^7.3.1",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "stripe": "^8.200.0",
-    "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.41"
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "stripe": "^12.10.0",
+    "swagger-ui-express": "^4.6.3",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.0.2",
-    "@types/node": "^16.0.0",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "@nestjs/cli": "^10.0.3",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.3",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.66",
+    "@types/express": "^4.17.17",
+    "@types/jest": "29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
