--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/common": "^10.0.3",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.3",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.3",
     "@nestjs/platform-socket.io": "^10.0.3",
     "@nestjs/swagger": "^7.0.4",
@@ -37,8 +39,11 @@
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "adminjs": "^7.0.6",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "mongoose": "^7.3.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
@@ -53,6 +58,7 @@
     "@nestjs/testing": "^10.0.3",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.66",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.2",
     "@types/node": "^20.3.1",
